# Ascencia

./: .gitignore  APPDATA.lnk  AppData_Phragware.lnk  Ascencia.c  Ascencia.h  Ascencia.sln  Ascencia.vcxproj  Ascencia.vcxproj.filters  Audio.c  CMakeLists.txt  GameState.c  Input.c  Input.h  LICENSE  Log.c  Log.h  Makefile  README.md  Random.c  Random.h  State.c  State.h  StringUtils.c  StringUtils.h  Timer.c  Timer.h  Window.c  Window.h  appdata link.lnk  build.bat  compile_data.bat  debug.bat  dev.bat  makefile  readme.md
Ascencia/: Ascencia.vcxproj
Ascengine/: Ascengine.vcxproj
Media/mainMenu/: MenuPlate.xcf  mainMenu_BackPanel.xcf
Media/mainMenu/final/: Thumbs.db
Media/mainMenu/flamingtext/: Thumbs.db
Media/mainMenu/sourcefiles/: FlamingText.txt  Thumbs.db
assets/: rh.ini
code/: ascencia.c  audio_thread.c  event_handler.c  logic_thread.c  makefile  platform.c  platform.h  render_thread.c  win32_ascencia.c
code/asset_compiler/: asset_compiler.c  lz77.c
code/gl/: wgl.h
code/pl/: audio_thread.c  event_handler.c  logic_thread.c  platform.c  platform.h  render_thread.c
code/pl/gl/: gl.h  makefile
code/util/: asset_compiler.c  lz77.c  lz77.h  types.h
code/win32/: audio_thread.c  event_handler.c  logic_thread.c  platform.c  platform.h  render_thread.c  win32_alloc.c  win32_alloc.h  win32_dir.c  win32_dir.h
data/archiver/: archiver.cpp  build&run.bat
data/assets/exolvere/: mainMenu_backbutton.xcf
data/assets/gimp/: title_screen_BlurMask.xcf
data/exolvere_main/mainmenu/: Thumbs.db
data/exolvere_main/system0/: ErrorCodes.csv
data/exolvere_setup/launcher/: Thumbs.db
data/exolvere_setup/mainmenu/: Thumbs.db
data/exolvere_setup/system0/: Thumbs.db
deleteme/123/sd/: asd.idx
glad/: glad.c  glad.h
include/glad/: glad.c
include/stb/: stb_image.h
installer/: test.cpp
int/x64_Debug/: Ascencia.exe.recipe  vc143.idb
int/x64_Debug/Ascencia.tlog/: Ascencia.lastbuildstate  CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
int/x64_Release/: Ascencia.exe.recipe
int/x64_Release/Ascencia.tlog/: Ascencia.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/: zlib.lib
misc/: design and story.org  notes.txt  xptable.txt
misc/exolvere_misc/: design and story.html  lore.org  story.org
misc/icon/: AscenciaIcon.xcf  icon32.h
misc/old code/a00/: CharAttributes.h  Globals.cpp  Globals.h  Narration.cpp  Narration.h  Print.cpp  Print.h  main.cpp  makefile
misc/old code/a01/: AOsys.cpp  AOsys.h  Player.cpp  Player.h  Print.cpp  Print.h  globals.h  main.cpp  makefile
misc/old code/a02/: AO_Engine.cpp  AO_Engine.h  AO_Headers.h  AO_SDL.cpp  AO_SDL.h  AO_Sprite.cpp  AO_Sprite.h  AO_TTF.cpp  AO_TTF.h  main.cpp  makefile
old/data/assets/flaming_text/: title_font.rtf
old/misc/: initial-brainstorm.rtf
old/misc/exolvere_misc/: win32_shortcuts.txt
old/misc/ico/: icon.xcf
old/misc/rh/: ResourceHacker.ini
old/src/: asset_manager.h  helpers.h  input_handler.cpp  input_handler.h  makefile
scripts/: rh.bat
scripts/rh/: rh.ini
src/: Ascencia.c  Ascencia.cpp  Ascencia.h  Audio.c  Audio.h  Events.cpp  Events.h  GameState.c  GameState.h  Input.c  Log.c  Log.h  Memory.h  State.c  Timer.c  Timer.h  Window.c  Window.h  ascencia.c  ascencia.cpp  ascencia_client.cpp  ascencia_linux.c  ascencia_win32.c  asset_manager.cpp  error_handler.cpp  error_handler.h  exolvere_dat_compiler.cpp  gamelogic.cpp  gamelogic.h  gamestate.cpp  gamestate.h  headers.h  helpers.cpp  makefile  systems.cpp  systems.h  win32_ascencia.c
src/ascencia/: main.cpp
src/ascencia/platform/: application.cpp  application.h  config.cpp  config.h  core.cpp  core.h  log.cpp  log.h  timer.cpp  timer.h  window.cpp  window.h
src/ascencia/util/: helper_defs.h
src/ascencia/video/: renderer.cpp  renderer.h
src/core/: core_entry.c
src/core/base/: base.h  entry.c  log.c  log.h  state.c  state.h
src/core/platform/: alloc.h  dir.h  platform.h  platform_linux.c  platform_macos.c  platform_win32.c  thread.h  window.h
src/core/platform/linux/: linux.c  linux_platform.c
src/core/platform/macos/: macos.c  macos_platform.c
src/core/platform/win32/: alloc.c  dir.c  thread.c  win32.c  win32_platform.c  window.c
src/exolvere_installer/: exolvere_installer.cpp
src/exolvere_main/: Dat.cpp  ErrorHandler.cpp  Headers.h  Media.cpp  Media.h  Moligen.h  MoligenHandleEvents.hpp  MoligenMainLoop.hpp  main.cpp
src/exolvere_setup/: Dat.h  ErrorHandler.h  Globals.h  Media.cpp  Moligen.cpp  Sprite.cpp  Sprite.h
src/linux/: linux_api.c  linux_state.c  linux_state.h
src/logic/: logic.h
src/platform/: alloc.h  application.h  assets.h  audio.h  config.h  filesystem.h  input.h  keybinds.h  logging.h  network.h  opengl.h  string_helpers.c  string_helpers.h  thread.h  threads.h  timing.h  window.h
src/shared/: stdlibs.h  types.h
src/util/: algorithm.c  algorithm.h  config.h  log.h  maths.c  maths.h  matrices.c  matrices.h  modules.h  platform.h  stdlib_interface.h  string_helpers.c  string_helpers.h  timer.h  types.h  utils.h  vectors.c  vectors.h
src/win32/: asc_stdlib.c  interface.c  resource.h  resource.rc  shared.h  win32_api.c  win32_api.h  win32_audio.c  win32_config.c  win32_filesystem.c  win32_input.c  win32_keybinds.c  win32_logging.c  win32_state.c  win32_state.h  win32_threads.c  win32_timing.c  win32_wgl.c  win32_wgl.h  win32_window.c  win32_window.h  win_api.c  win_api.h  win_config.c  window.c
src/window/: input.h  opengl.h  window.h
util/rh/: rh.ini
